--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "run-db": "json-server --watch server/db.json --routes server/routes.json"
   },
   "private": true,
   "dependencies": {
